[package]
name = "tss-cli"
version = "0.1.0"
authors = [
    "Kaspars Sprogis <darklow@gmail.com>"
]
edition = "2018"

[[bin]]
name = "tss_cli"
path = "src/main.rs"

[dependencies]
#rocket = { version = "0.4.2", default-features = false, features = ["tls"] }
#rocket_contrib = { version = "0.4.2" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hex = "0.4"
#reqwest = { version = "0.10.1", default-features = false, features = ["native-tls", "json", "blocking"] }
uuid = { git = "https://github.com/PolySignInc/uuid", branch = "0.8.1t", features = ["v4"] }
rust-crypto = "0.2"
libsecp256k1 = "0.3.2"
paillier = { git = "https://github.com/PolySignInc/rust-paillier", branch = "v0.3.4t"}
zk-paillier = { git = "https://github.com/PolySignInc/zk-paillier", branch = "v0.2.5t"}
#clap = { version = "2.33", features = ["yaml"] }
log = {version = "0.4.6", features = ["std"]}

[dependencies.multi-party-ecdsa]
git = "https://github.com/PolySignInc/multi-party-ecdsa"
branch = "v0.3.0t"
#branch = "master"

[dependencies.curv]
git = "https://github.com/PolySignInc/curv"
#tag = "v0.2.3t"
branch = "v0.2.3t"
features = ["ec_secp256k1"]

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
env_logger = "0.7"

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/PolySignInc/rust-gmp" }
uuid = { version = "0.8", git = "https://github.com/PolySignInc/uuid", branch = "0.8.1t", features = ["v4"] }

[profile.release]
opt-level = 2

[lib]
name = "tss_cli"
path = "src/lib.rs"